--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Horiseon Social</title>
 </head>
-
 <body>
     <header>
         <h1>Hori<span>seo</span>n</h1>
@@ -25,49 +23,61 @@
         </nav>
     </header>
     <div class="hero"></div>
-    <section>
-        <div id="search-engine-optimization">
-            <img alt="Desk with notebook showing the elements of SEO" src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+    <main>
+        <section id="search-engine-optimization">
+            <img alt="Desk with notebook showing the elements of SEO"
+                src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                The dominance of mobile internet use means that users are searching for the right business as they
+                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management">
-            <img alt="Laptop with charts showing reputation increasing" src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        </section>
+        <section id="online-reputation-management">
+            <img alt="Laptop with charts showing reputation increasing"
+                src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                internet connection to say whatever they want about your business. Online Reputation Management gives
+                you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing">
-            <img alt="Communal table with various social media sticker icons" src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        </section>
+        <section id="social-media-marketing">
+            <img alt="Communal table with various social media sticker icons"
+                src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social media continues to have a sizable influence on buying habits. Social media marketing helps you
+                determine which platforms are suited to your brand, using analytics to find the right markets and
+                increase your lead generation.
             </p>
-        </div>
-    </section>
+        </section>
+    </main>
     <aside>
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img alt="An icon showing a gear funneling into a dollar sign" src="./assets/images/lead-generation.png" />
             <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                Inbound strategies for lead generation require less work for your business, bringing customers directly
+                to your website.
             </p>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img alt="An icon of a man with a bright lightbulb for a head" src="./assets/images/brand-awareness.png" />
             <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                Users find your business through paid and organic searches, increasing the search ranking and visibility
+                for your business.
             </p>
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img alt="An icon of a gear and dollar signs" src="./assets/images/cost-management.png"></img>
             <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                need to advertise your page.
             </p>
         </div>
     </aside>
@@ -78,5 +88,4 @@
         </p>
     </footer>
 </body>
-
 </html>
