--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="icon" 
+      type="image/png" 
+      href="assets/images/doodle-sun.png">
     <title>Horiseon Social</title>
 </head>
 <body>
@@ -22,7 +25,9 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+    <figure>
+        <img src="assets/images/digital-marketing-meeting.jpg" alt="Photo of digital marketing team meeting" />
+    </figure>
     <main>
         <section id="search-engine-optimization">
             <img alt="Desk with notebook showing the elements of SEO"
@@ -56,30 +61,32 @@
         </section>
     </main>
     <aside>
-        <div class="benefit-lead">
+        <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img alt="An icon showing a gear funneling into a dollar sign" src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <hr>
+        <section class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img alt="An icon of a man with a bright lightbulb for a head" src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <hr>
+        <section class="benefit-cost">
             <h3>Cost Management</h3>
             <img alt="An icon of a gear and dollar signs" src="./assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
             </p>
-        </div>
+        </section>
     </aside>
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
